Collecting required materials

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Mini_Project</title>
+    <link rel="icon" class="icon" href="IMG/Logo/Website_LOGO (1).png">
+    <title>Visit Out : A Journey with us</title>
 </head>
 <body>
-    
+    <div class="container">
+        <img src="IMG/Background/k-mitch-hodge-wZi9xiBAnWE-unsplash.jpg" class="Background-img">
+    </div>
 </body>
 </html>
