work on header-section
-> Header section created.
-> Logo was designed.
-> search-bar section was created.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" class="icon" href="IMG/Logo/Website_LOGO (1).png">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    
+    <link rel="icon" class="icon-head" href="IMG/Logo/VISIT-logo-only (1).svg">
     <title>Visit Out : A Journey with us</title>
 </head>
 <body>
-    <div class="container">
-        <img src="IMG/Background/k-mitch-hodge-wZi9xiBAnWE-unsplash.jpg" class="Background-img">
-    </div>
+    <header>
+        <!-- <img src="IMG/Logo/VISIT-removebg-preview.png" alt="logo-img" class="logo-img"> -->
+        <a href="#" class="logo"><Span class="span-V">V </Span> isit <span class="span-O">O </span> ut</a>
+        <nav class="navbar">
+            <a href="#home">Home</a>
+            <a href="#book">book</a>
+            <a href="#packeges">Packeges</a>
+            <a href="#services">Services</a>
+            <a href="#gallery">Gallery</a>
+            <a href="#review">Review</a>
+            <a href="#contact">Contact</a>
+        </nav>
+        <div class="icons">
+            <div class="left-icon">
+                <form action="" class="search-bar-container">
+                    <input 
+                    type="search" 
+                    id="search-bar"  
+                    placeholder="Search here...">
+                    <i class="fas fa-search" id="search-btn"></i>
+                </form>
+            </div>
+            <div class="right-icon">
+                <i class="fas fa-user" id="login-btn"></i>
+
+            </div>
+            
+        </div>
+        <!-- <form action="" class="search-bar-container">
+            <input type="search" id="search-bar" placeholder="Search here...">
+            <i class="fas fa-search" id="search-btn"></i>
+        </form> -->
+
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+    <script src="JS/script.js"></script>
 </body>
 </html>
