--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <input 
                     type="search" 
                     id="search-bar"  
-                    placeholder="Search here...">
+                    placeholder="Press Enter To Search...">
                     <i class="fas fa-search" id="search-btn"></i>
                 </form>
             </div>
@@ -36,7 +36,6 @@
                 <i class="fas fa-user" id="login-btn"></i>
             </div>
         </div>
-
     </header>
 
 
