--- a/index.html
+++ b/index.html
@@ -12,17 +12,38 @@
 <body>
     <header>
         <!-- <img src="IMG/Logo/VISIT-removebg-preview.png" alt="logo-img" class="logo-img"> -->
-        <a href="#" class="logo"><Span class="span-V">V </Span> isit <span class="span-O">O </span> ut</a>
-        <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="#book">book</a>
-            <a href="#packeges">Packeges</a>
-            <a href="#services">Services</a>
-            <a href="#gallery">Gallery</a>
-            <a href="#review">Review</a>
-            <a href="#contact">Contact</a>
-        </nav>
-        <div class="icons">
+        <div class="left-header">
+            <a href="#" class="logo"><Span class="span-V">V </Span> isit <span class="span-O">O </span> ut</a>
+            <span class="tooltip-logo">Visit Out : A Journey with us</span>
+        </div>
+        <div class="middle-header">
+            <nav class="navbar">
+                <ul>
+                    <li>
+                        <a href="#home"><span>Home</span></a>
+                    </li>
+                    <li>
+                        <a href="#book"><span>book</span></a>
+                    </li>
+                    <li>
+                        <a href="#packeges"><span>Packeges</span></a>
+                    </li>
+                    <li>
+                        <a href="#services"><span>Services</span></a>
+                    <li>
+                    <li>
+                        <a href="#gallery"><span>Gallery</span></a>
+                    </li>
+                    <li>
+                        <a href="#review"><span>Review</span></a>
+                    </li>
+                    <li>
+                        <a href="#contact"><span>Contact</span></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="right-header">
             <div class="left-icon">
                 <form action="" class="search-bar-container">
                     <input 
@@ -37,6 +58,7 @@
             </div>
         </div>
     </header>
+   
 
 
 
