i have done some grammatical corrections

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="#book"><span>book</span></a>
                     </li>
                     <li>
-                        <a href="#packeges"><span>Packeges</span></a>
+                        <a href="#packeges"><span>Packages</span></a>
                     </li>
                     <li>
                         <a href="#services"><span>Services</span></a>
